k8s/fastapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: fastapi
  template:
    metadata:
      labels:
        app: fastapi
    spec:
      containers:
        - name: fastapi
          #image: "${DOCKER_USERNAME}/fastapi-redis:latest"
          #image: fastapi-redis:latest
          image: chanyanhon/fastapi-redis:latest
          #image: "$(IMAGE_NAME)"  # Reference the variable from the ConfigMap
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /docs
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
